fix: nav styling on mobile

--- a/exercise3/styles/def.css
+++ b/exercise3/styles/def.css
@@ -62,4 +62,8 @@ footer {
     border-color: black;
     border-width: 1px;
   }
+
+  .index-button {
+    border-right-style: none;
+  }
 }
